# web-benchmarker

./: .gitignore  README.md  devenv.nix  latest-run.json  supported-langs.json
.github/workflows/: static.yml
docs/: CNAME  index.html
test-runner/: Cargo.toml
test-runner/src/: main.rs
tests/1/: test.toml
tests/1/web/: Cargo.toml
tests/1/web/src/: main.rs
tests/10/: devenv.nix  test.toml
tests/10/webapp/: .gitignore  mix.exs
tests/10/webapp/config/: config.exs
tests/11/: README.md  build.gradle.kts  devenv.nix  gradlew.bat  test.toml
tests/12/: devenv.nix  test.toml
tests/12/webapp/: Gemfile  app.rb
tests/13/: devenv.nix  test.toml
tests/13/web/: Cargo.toml
tests/13/web/src/: main.rs
tests/14/: devenv.nix  test.toml
tests/14/web/: .gitignore  corral.json  lock.json  main.pony
tests/2/: devenv.nix  test.toml
tests/2/web/: dune-project  web.opam
tests/2/web/dune.lock/: lock.dune
tests/2/web/lib/: dune
tests/2/web/test/: dune
tests/3/: devenv.nix  test.toml
tests/3/webapp/Properties/: launchSettings.json
tests/4/: devenv.nix  go.mod  main.go  test.toml
tests/5/: devenv.nix  test.toml
tests/5/webapp/: main.ts
tests/6/: devenv.nix  test.toml
tests/6/webapp/: Cargo.toml
tests/6/webapp/src/: main.rs
tests/7/: devenv.nix  test.toml
tests/7/webapp/: dune-project  webapp.opam
tests/7/webapp/dune.lock/: cohttp-eio.pkg  lock.dune
tests/7/webapp/lib/: dune
tests/7/webapp/test/: dune
tests/8/: .envrc  devenv.nix  test.toml
tests/8/webapp/: main.ts
tests/9/: .gitignore  devenv.nix  test.toml
ui/: index.html
(+5 files in other folders)
