(lang dune 3.18)

(name webapp)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name webapp)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml eio cohttp cohttp-eio eio_main)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
